--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,16 @@
-steps:
-  - uses: testspace-com/setup-testspace@v1
-    with:
-      domain: ${{MattiasITHS}}
 
-  ..
-  - name: Publish Results to Testspace
-    run: testspace "path/to/*.xml"
+name: CI
+on:
+  workflow_dispatch:
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: testspace-com/setup-testspace@v1
+        with:
+          domain: ${{MattiasITHS}}
+      - name: Push result to Testspace server
+        run: |
+          testspace results.xml 
+        if: always()
