--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,21 @@
-steps:
-  - uses: testspace-com/setup-testspace@v1
-    with:
-      domain: ${{github.MattiasITHS}}
-  ..
-  - name: Publish Results to Testspace
-    run: testspace Results/*.xml"
+name: Yet Another
+on: 
+  push:
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+  pull_request:
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+jobs:
+  one-more:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Testspace client install & config
+        uses: testspace-com/setup-testspace@v1
+        with:
+          domain: ${{github.MattiasITHS}}
+      - name: Testspace push test content
+        run: testspace "[${{ github.workflow }}]./Results/*.xml"
